Apply suggestions from code review
Co-authored-by: Jesse Glick <jglick@cloudbees.com>